sort out z index on the ads, should be good in both ie and firefox now add overflow: hidden to the right boxes, which fixes weirdness when you have a lot of groups

--- a/dumbhippo/trunk/server/web/css/sitewide-iefixes.css
+++ b/dumbhippo/trunk/server/web/css/sitewide-iefixes.css
@@ -48,5 +48,5 @@ a.dh-toolbar-item:link {
 }
 #dhOTP {
 	position:				absolute;
-	z-index:				0;
+	z-index:				-1;
 }
